--- a/src/main/resources/static/css/homestyle.css
+++ b/src/main/resources/static/css/homestyle.css
@@ -173,12 +173,12 @@ h3 {
     margin-top: 10px;
 }
 
-/*a:hover,
+a:hover,
 a:focus {
     text-decoration: none;
     color: transperant;
     outline: none;
-}*/
+}
 
 .read_more_link {   
     font-style: italic;
@@ -251,24 +251,40 @@ nav:hover {
 	font-weight: bold;
 }
 .navbar-nav li a {
-    color: #fff;
+    color: black;
     font-size: 15px;
     font-weight: 300;
+    padding-left: 10px;
 }
 
 .nav>li>a:focus,
 .nav>li>a:hover {
     background: transparent;
-    border-bottom: 2px solid #fff;
     font-weight: 600;
 }
 
 .nav>li>a:active{
     background: transparent;
-    border-bottom: 2px solid #fff;
     font-weight: 600;
 }
 
+.dropdown-divider{
+    border-top: 1px solid black;
+    padding: 0px;
+}
+
+.dropdown-divider>a{
+    display: block; 
+}
+
+.dropdown-divider>a:focus,
+.dropdown-divider>a:hover
+{
+    border: 1px solid black;
+    background-color: black;
+    color: white; 
+    text-decoration: none;
+}
 .active {
     border-bottom: 2px solid #fff;
     transition-duration: 0.4s;
@@ -312,6 +328,11 @@ nav.top-nav-collapse {
     border-bottom: 2px solid #fff !important;
     font-weight: 600 !important;
 }
+
+li.dropdown-toggle {
+    height: 34px !important;
+}
+
 .navbar-toggle span {
     background: #fff;
 }
