--- a/src/main/resources/static/css/profilestyle.css
+++ b/src/main/resources/static/css/profilestyle.css
@@ -1,3 +1,30 @@
+/*body {
+  font-size: 16px;
+  color: #fff;
+  background-color: white;
+  font-family: 'Oxygen', sans-serif;
+}
+
+#header-nav {
+	background-color: black;
+	border-radius: 0;
+	border: 0;
+}
+
+#logo-img {
+	background: url('../images/logo.png') no-repeat;
+	width: 250px;
+	height: 150px;
+	margin: 10px 15px 10px 0;
+}
+
+nav {
+    background: rgba(255, 51, 102, 0.8);
+    padding: 10px 0;
+    transition: all 0.3s linear;
+    box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.5);
+    border-radius: 0px !important;
+}*/
 
 html{
     overflow-x:hidden;
@@ -388,3 +415,66 @@ li.dropdown-toggle {
     bottom: -24px;
 }
 
+/*
+#header-nav {
+	background: rgba(0, 0, 0, 0.5);
+    padding: 10px 0;
+    transition: all 0.3s linear;
+    box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.5);
+    border-radius: 0px !important;
+}
+
+
+#header-nav:hover {
+    background: rgba(0, 0, 0, 0.8);
+    transition: all 0.3s linear;
+}
+
+.navbar-brand{
+	paddinng-top: 25px;
+}
+
+.navbar-brand h1{
+	font-family: 'Lora' , serif;
+	color: white;
+	font-size: 1.5em;
+	text-transform: uppercase;
+	font-weight: bold;
+	text-shadow: 1px 1px 1px #222;
+	margin-top: 0;
+	margin-bottom: 0;
+	line-height: .75;
+}
+
+.navbar-brand p{
+	color: white;
+	text-transform: uppercase;
+	font-size: .7em;
+	margin-top: 15px;
+}
+
+
+.navbar-brand p input{
+	color: black;
+	text-transform: uppercase;
+	font-size: .7em;
+	margin-top: 15px;
+	border: 5px;
+	border-color: white;
+}
+.navbar-brand p button{
+	color: black;
+	text-transform: uppercase;
+	font-size: .7em;
+	margin-left:5px;
+	margin-top: 15px;
+	border: 5px;
+	background-color: white;
+}
+.navbar-brand a:hover,.navbar-brand:focus{
+	text-decoration: none;
+}
+
+.navbar-brand p span{
+	vertical-align: middle;
+}*/
