--- a/src/main/resources/static/css/homestyle.css
+++ b/src/main/resources/static/css/homestyle.css
@@ -1,31 +1,3 @@
-/*body {
-  font-size: 16px;
-  color: #fff;
-  background-color: white;
-  font-family: 'Oxygen', sans-serif;
-}
-
-#header-nav {
-	background-color: black;
-	border-radius: 0;
-	border: 0;
-}
-
-#logo-img {
-	background: url('../images/logo.png') no-repeat;
-	width: 250px;
-	height: 150px;
-	margin: 10px 15px 10px 0;
-}
-
-nav {
-    background: rgba(255, 51, 102, 0.8);
-    padding: 10px 0;
-    transition: all 0.3s linear;
-    box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.5);
-    border-radius: 0px !important;
-}*/
-
 html{
     overflow-x:hidden;
 }
@@ -36,111 +8,6 @@ body {
     background: #fff;
     overflow-x: hidden;
 }
-#index-banner {
-    padding-top: 50px;
-}
-#header,
-#magical_feature,
-#work,
-#feature-desc,
-#key-feature,
-.video-jarallax,
-#why_us,
-#screenshots,
-.testimonial-jarallax,
-#team,
-#packages,
-#tweet,
-#quetions,
-#subscribe,
-#footer,
-#some_facts {
-    padding: 60px 0;
-    background: #fff;
-}
-
-#key-feature,
-#screenshots,
-#team,
-#tweet,
-#subscribe,
-#footer,
-#some_facts,
-#magical_feature {
-    background: #f4f7f7;
-}
-.video-jarallax{
-    background: #fff;
-}
-.m0 {
-    margin: 0px;
-}
-.mt0 {
-    margin-top: 0px;
-}
-.mt15 {
-    margin-top: 15px !important;
-}
-.mt30 {
-    margin-top: 30px;
-}
-.mt20 {
-    margin-top: 20px;
-}
-.mt-10{
-    margin-top: -10px;
-}
-.mb0 {
-    margin-bottom: 0px;
-}
-.mb5 {
-    margin-bottom: 5px;
-}
-.mb10 {
-    margin-bottom: 10px;
-}
-.mb50 {
-    margin-bottom: 50px;
-}
-.mb20 {
-    margin-bottom: 20px;
-}
-.mb30 {
-    margin-bottom: 30px;
-}
-.mb40 {
-    margin-bottom: 40px;
-}
-.mr5 {
-    margin-right: 5px;
-}
-.mr0 {
-    margin-right: 0px;
-}
-.ml0 {
-    margin-left: 0px;
-}
-.ml5 {
-    margin-left: 5px;
-}
-.p0 {
-    padding: 0px;
-}
-.pl0{
-    padding-left: 0px;
-}
-.pt15 {
-    padding-top: 15px;
-}
-.pt20 {
-    padding-top: 20px;
-}
-.pt40 {
-    padding-top: 40px;
-}
-.pl50 {
-    padding-left: 50px;
-}
 p {
     line-height: 1.6;
     letter-spacing: 1px;
@@ -148,31 +15,6 @@ p {
     color: #222;
     font-size: 15px;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    color: #111;
-}
-h2 {
-    font-size: 30px;
-    line-height: 1.4;
-    margin-top: 0px;
-    margin-bottom: 20px;
-    font-weight: 100;
-    letter-spacing: 2px;
-}
-h3 {
-    font-size: 18px;
-    line-height: 1.4;
-    letter-spacing: 2px;
-    font-weight: 400;
-    margin-bottom: 20px;
-    margin-top: 10px;
-}
-
 a:hover,
 a:focus {
     text-decoration: none;
@@ -180,60 +22,13 @@ a:focus {
     outline: none;
 }
 
-.read_more_link {   
-    font-style: italic;
-    color: #ff3366;
-}
-time{
-    text-transform: uppercase;
-    font-weight: 500;
-}
 ul {
     list-style-type: none;
 }
-.icon-color {
-    color: #ff3366;
-}
-.common-btn {
-    background-color: #ff3366;
-    border-color: #ff3366;
-    border-radius: 0px;
-    transition-duration: 0.5s;
-    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
-    padding: 15px;
-    text-transform: uppercase;
-}
-.common-btn:hover {
-    color: #ff3366;
-    transition-duration: 0.5s;
-}
-.op6 {
-    opacity: 0.6;
-}
-.bolder{
-	font-weight: 400;
-}
-
 #menuLogin>button{
     background-color: transparent !important;
     border: none;
     /*border-radius: 1px !important;*/
-}
-/*General CSS Ends*/
-/*Wave Button Css Starts*/
-/*
-.colored-button {
-    color: #fff !important;
-    background: #ff3366 !important;
-}
-.colored-button:hover {
-    background: #fff;
-    color: #ff3366;
-}*/
-/*Wave Button Css Ends*/
-/* 02. Nav-Menu CSS Starts*/
-.brand-logo img{
-    width: 130px;
 }
 nav {
     background: rgba(0, 0, 0, 0.8);
@@ -241,6 +36,10 @@ nav {
     transition: all 0.3s linear;
     box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.5);
     border-radius: 0px !important;
+    left: 0;
+    top: -80px;
+    right: 0;
+    height: auto;
 }
 nav:hover {
     background: rgba(0, 0, 0, 1);
@@ -301,21 +100,7 @@ nav:hover {
 .navbar {
     position: fixed;
 }
-nav {
-    left: 0;
-    top: -80px;
-    right: 0;
-    padding: 10px 0;
-    transition: all 0.3s linear;
-    height: auto;
-    z-index: 99;
-}
-nav.top-nav-collapse {
-    box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.5);
-    opacity: 0.96;
-    padding-bottom: 10px;
-    padding-top: 10px;
-}
+
 .form-inline>button{
 	background: transparent;
 	border: 1px solid black;
@@ -329,13 +114,6 @@ nav.top-nav-collapse {
 	border: 1px solid black;
 }
 
-/*
-.dropdown-toggle[aria-expanded="true"] {
-    background: transparent !important;
-    border-bottom: 2px solid #fff !important;
-    font-weight: 600 !important;
-}*/
-
 li.dropdown-toggle {
     height: 34px !important;
 }
@@ -343,79 +121,23 @@ li.dropdown-toggle {
 .navbar-toggle span {
     background: #fff;
 }
-#work h2 {
-    position: relative;
-}
-#work h2:after {
-    content: "";
-    position: absolute;
-    height: 2px;
-    width: 200px;
-    background: #ff3366;
-    left: 41%;
-    bottom: -24px;
+
+.dropdown-menu{
+    background-color: white !important;
+    float: right !important;
+    width: 10px !important;
+    border: 2px solid black !important;
 }
 
-/*
-#header-nav {
-	background: rgba(0, 0, 0, 0.5);
-    padding: 10px 0;
-    transition: all 0.3s linear;
-    box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.5);
-    border-radius: 0px !important;
+.dropdown-menu>p{
+    padding-bottom: 0px !important;
+    margin-bottom: 0px !important;
+}
+.dropdown-menu>div{
+    padding-bottom: 0px !important;
+    margin-bottom: 0px !important;
 }
 
-
-#header-nav:hover {
-    background: rgba(0, 0, 0, 0.8);
-    transition: all 0.3s linear;
+.btn{
+    padding-left: 0px;
 }
-
-.navbar-brand{
-	paddinng-top: 25px;
-}
-
-.navbar-brand h1{
-	font-family: 'Lora' , serif;
-	color: white;
-	font-size: 1.5em;
-	text-transform: uppercase;
-	font-weight: bold;
-	text-shadow: 1px 1px 1px #222;
-	margin-top: 0;
-	margin-bottom: 0;
-	line-height: .75;
-}
-
-.navbar-brand p{
-	color: white;
-	text-transform: uppercase;
-	font-size: .7em;
-	margin-top: 15px;
-}
-
-
-.navbar-brand p input{
-	color: black;
-	text-transform: uppercase;
-	font-size: .7em;
-	margin-top: 15px;
-	border: 5px;
-	border-color: white;
-}
-.navbar-brand p button{
-	color: black;
-	text-transform: uppercase;
-	font-size: .7em;
-	margin-left:5px;
-	margin-top: 15px;
-	border: 5px;
-	background-color: white;
-}
-.navbar-brand a:hover,.navbar-brand:focus{
-	text-decoration: none;
-}
-
-.navbar-brand p span{
-	vertical-align: middle;
-}*/
