added sweet alert

--- a/src/main/resources/static/css/SignUpStyle.css
+++ b/src/main/resources/static/css/SignUpStyle.css
@@ -230,3 +230,8 @@ li.dropdown-toggle {
     left: 41%;
     bottom: -24px;
 }
+
+@media screen and (min-width: 0px) and (max-width: 400px) {
+  .navbar-brand {font-size: 12px;}  /* show it on small screens */
+}
+
