--- a/src/main/resources/static/css/profilestyle.css
+++ b/src/main/resources/static/css/profilestyle.css
@@ -18,7 +18,7 @@ p {
 }
 
 h3,
-h4,
+h4
 {
     color: #111;
 }
@@ -35,7 +35,7 @@ h3 {
 a:hover,
 a:focus {
     text-decoration: none;
-    color: transperant;
+    color: transparent;
     outline: none;
 }
 
@@ -159,9 +159,10 @@ nav:hover {
     color: white;
     /*transition: all 0.3s linear;*/
 }
-.grid1elements{
+.wrapper>#sideList{
 
     border-right: 2px solid black;
+    padding-left: 10px;
 
 }
 
@@ -221,6 +222,10 @@ li.dropdown-toggle {
 
 .btn{
     padding-left: 0px;
+}
+
+@media screen and (min-width: 0px) and (max-width: 400px) {
+  .navbar-brand {font-size: 12px;}  /* show it on small screens */
 }
 
 
