--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -116,3 +116,7 @@ nav:hover {
 .navbar-toggle span {
     background: #fff;
 }
+
+@media screen and (min-width: 0px) and (max-width: 400px) {
+  .navbar-brand {font-size: 12px;}  /* show it on small screens */
+}
