--- a/src/main/resources/static/css/homestyle.css
+++ b/src/main/resources/static/css/homestyle.css
@@ -147,4 +147,65 @@ li.dropdown-toggle {
   .navbar-brand {font-size: 12px;}  /* show it on small screens */
 }
 
+#skill_name{
+    margin-bottom: 0px !important;
+}
+
+md-dialog.md-transition-in{
+    min-width: 200px !important;
+    width: 500px !important;
+    max-height: 90% !important; 
+}
+
+md-dialog-actions>.md-primary:not([disabled]):hover {
+    background-color: rgba(0, 0, 0, 1) !important;
+    color: white !important;
+}
+
+md-dialog-actions>.md-primary:not([disabled]){
+  /*background-color: rgba(158, 158, 158, 0.2);*/
+    background-color: white !important;
+    color: black !important;
+}
+
+md-toolbar>.md-toolbar-tools{
+    background-color: rgba(0, 0, 0, 0.8) !important;
+    color: white;   
+}
+
+md-toolbar>.md-toolbar-tools:hover{
+    background-color: rgba(0, 0, 0,1) !important;   
+}
+
+.remove{
+  line-height: 4rem !important;
+  min-width: 0 !important;
+  width: 4rem !important;
+  height: 4rem !important;
+}
+
+.addfields{
+    line-height: 4rem !important;
+  min-width: 0 !important;
+  width: 4rem !important;
+  height: 4rem !important;  
+}
+
+.day{
+    margin-top: auto;
+}
+
+md-input-container:not(.md-input-has-value) input:not(:focus),
+md-input-container:not(.md-input-has-value) input:not(:focus)::-webkit-datetime-edit-ampm-field,
+md-input-container:not(.md-input-has-value) input:not(:focus)::-webkit-datetime-edit-day-field,
+md-input-container:not(.md-input-has-value) input:not(:focus)::-webkit-datetime-edit-hour-field,
+md-input-container:not(.md-input-has-value) input:not(:focus)::-webkit-datetime-edit-millisecond-field,
+md-input-container:not(.md-input-has-value) input:not(:focus)::-webkit-datetime-edit-minute-field,
+md-input-container:not(.md-input-has-value) input:not(:focus)::-webkit-datetime-edit-month-field,
+md-input-container:not(.md-input-has-value) input:not(:focus)::-webkit-datetime-edit-second-field,
+md-input-container:not(.md-input-has-value) input:not(:focus)::-webkit-datetime-edit-week-field,
+md-input-container:not(.md-input-has-value) input:not(:focus)::-webkit-datetime-edit-year-field,
+md-input-container:not(.md-input-has-value) input:not(:focus)::-webkit-datetime-edit-text {
+color: black !important; } 
+
 
