add skill link added on home page.

--- a/src/main/resources/static/css/homestyle.css
+++ b/src/main/resources/static/css/homestyle.css
@@ -130,8 +130,8 @@ li.dropdown-toggle {
 }
 
 .dropdown-menu>p{
-    padding-bottom: 0px !important;
-    margin-bottom: 0px !important;
+    padding: auto !important;
+    margin: auto !important;
 }
 .dropdown-menu>div{
     padding-bottom: 0px !important;
