--- a/src/main/resources/static/css/simple-sidebar - old.css
+++ b/src/main/resources/static/css/simple-sidebar - old.css
@@ -100,7 +100,7 @@ body {
     background: none;
 }
 
-@media(min-width:768px) {
+/*@media(min-width:768px) {
     #wrapper {
         padding-left: 250px;
     }
@@ -127,4 +127,4 @@ body {
         position: relative;
         margin-right: 0;
     }
-}
+}*/
