--- a/src/main/resources/static/css/styles - old.css
+++ b/src/main/resources/static/css/styles - old.css
@@ -39,7 +39,7 @@ ul {
 }
 
 nav {
-    background: rgba(50,50, 50,1);
+    background: rgba(0, 0, 0, 0.8);
     padding: 10px 0;
     transition: all 0.3s linear;
     box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.5);
@@ -51,7 +51,7 @@ nav {
     z-index: 99;
 }
 nav:hover {
-    background: rgba(0, 0, 0,1);
+    background: rgba(0, 0, 0, 1);
     transition: all 0.3s linear;
 }
 
@@ -145,16 +145,5 @@ nav:hover {
 
 .caption>p{
     min-height: 15px !important;
-}
-
-
-svg {
-    fill: inherit;
-}
-
-.skillCard{
-    min-height: 220px !important;
-    min-width: 220px !important;
-    word-wrap: break-word;
 }
 
