--- a/src/main/resources/static/css/homestyle.css
+++ b/src/main/resources/static/css/homestyle.css
@@ -235,7 +235,8 @@ body.md-dialog-is-showing {
 }
 
 .skillDialog{
-    max-height: 95% !important;*/
+    max-height: 95% !important;
+    max-width: 40%;
     
 }
 
