--- a/src/main/resources/static/css/profilestyle.css
+++ b/src/main/resources/static/css/profilestyle.css
@@ -43,7 +43,8 @@ ul {
     list-style-type: none;
 }
 nav {
-    background: rgba(0, 0, 0, 0.8);
+    font-family: "Oxygen", sans-serif;
+    background: rgba(50,50, 50,1);
     padding: 10px 0;
     transition: all 0.3s linear;
     box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.5);
@@ -67,7 +68,7 @@ nav:hover {
 	color: #fff;
 	font-weight: bold;
 }
-.navbar-nav li a {
+/*.navbar-nav li a {
     color: black;
     font-size: 15px;
     font-weight: 300;
@@ -83,14 +84,14 @@ nav:hover {
 .nav>li>a:active{
     background: transparent;
     font-weight: 600;
-}
+}*/
 
 .dropdown-divider{
-    border-top: 1px solid black;
+    border-top: 1px solid white;
     padding: 0px;
 }
 
-.dropdown-divider>a{
+/*.dropdown-divider>a{
     display: block; 
 }
 
@@ -101,7 +102,7 @@ nav:hover {
     background-color: black;
     color: white; 
     text-decoration: none;
-}
+}*/
 .active {
     border-bottom: 2px solid #fff;
     transition-duration: 0.4s;
@@ -110,7 +111,7 @@ nav:hover {
     top: 0;
 }
 .navbar {
-    position: relative;
+    position: fixed;
 }
 
 #menuLogin>button{
@@ -124,8 +125,7 @@ nav:hover {
 }
 
 .wrapper{
-    margin: auto ;
-    /*position: relative;auto 0*/
+   padding-top: 80px !important;
 }
 
 .form-group .btn-primary{
@@ -195,7 +195,6 @@ button[type="submit"]:disabled{
 	border: 1px solid black;
 }
 
-
 li.dropdown-toggle {
     height: 34px !important;
 }
@@ -205,19 +204,26 @@ li.dropdown-toggle {
 }
 
 .dropdown-menu{
-    background-color: white !important;
-    float: right !important;
-    width: 10px !important;
-    border: 2px solid black !important;
+    background-color: rgba(50,50, 50,1) !important;
+    /*float: right !important;*/
+    width: 100% !important;
+    /*border: 2px solid black !important;*/
 }
 
 .dropdown-menu>p{
-    padding-bottom: 0px !important;
-    margin-bottom: 0px !important;
+    padding: auto !important;
+    margin: auto !important;
 }
-.dropdown-menu>div{
-    padding-bottom: 0px !important;
-    margin-bottom: 0px !important;
+
+.dropdown-menu>li>a{
+    color: white !important;
+}
+
+.dropdown-menu>li>a:hover,
+.dropdown-menu>li>a:focus
+{
+    background-color: rgba(0,0, 0,1) !important;
+    color: white !important;
 }
 
 .btn{
@@ -225,7 +231,8 @@ li.dropdown-toggle {
 }
 
 @media screen and (min-width: 0px) and (max-width: 400px) {
-  .navbar-brand {font-size: 12px;}  /* show it on small screens */
+  .navbar-brand {font-size: 12px;} 
+  .wrapper{padding-top: 12% !important;} 
 }
 
 .Skills{
