--- a/src/main/resources/static/css/profilestyle.css
+++ b/src/main/resources/static/css/profilestyle.css
@@ -207,6 +207,8 @@ li.dropdown-toggle {
     background-color: rgba(50,50, 50,1) !important;
     /*float: right !important;*/
     width: 100% !important;
+    /*margin-left: -15px;
+    margin-right: -15px;*/
     /*border: 2px solid black !important;*/
 }
 
@@ -226,13 +228,28 @@ li.dropdown-toggle {
     color: white !important;
 }
 
+.navbar-right{
+    padding-right: 0px !important;
+    margin-right: 0px !important;
+    padding-left: 0px !important;
+}
+
+.navbar-nav{
+    width: 100% !important;
+    margin: 0px 0px 0px 0px!important;
+}
+
 .btn{
     padding-left: 0px;
 }
 
+.container{
+    padding-right: 0px !important;
+}
+
 @media screen and (min-width: 0px) and (max-width: 400px) {
-  .navbar-brand {font-size: 12px;} 
-  .wrapper{padding-top: 12% !important;} 
+  /*.navbar-brand {font-size: 12px;} */
+  /*.wrapper{padding-top: 12% !important;} */
 }
 
 .Skills{
