--- a/src/main/resources/static/css/homestyle.css
+++ b/src/main/resources/static/css/homestyle.css
@@ -40,7 +40,7 @@ nav {
     top: -80px;
     right: 0;
     height: auto;
-    z-index: 99;
+    z-index: 9;
 }
 nav:hover {
     background: rgba(0, 0, 0, 1);
@@ -274,7 +274,7 @@ body.md-dialog-is-showing {
 .md-dialog-container{
     /*top: 10% !important;
     max-height: 95% !important;*/
-    z-index: 999 !important;
+    /*z-index: 999 !important;*/
 }
 
 /*.dialogUsage #popupContainer {
